2008-10-06  Mark Mentovai  <mark@moxienet.com>

Reviewed by Tim Hatcher.

        Use #if ENABLE(feature) where possible, and #if ENABLE_feature where
        Platform.h is not available, in preference to #ifdef ENABLE_feature.
        #ifdef is wrong now that features are disabled by #defining
        ENABLE_feature to 0.

        https://bugs.webkit.org/show_bug.cgi?id=21338

        * bindings/objc/DOMEvents.h:
        * bindings/objc/PublicDOMInterfaces.h:
        * dom/Document.idl:
        * page/DOMWindow.idl:
        * svg/svgtags.in:

Canonical link: https://commits.webkit.org/29614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37362 268f45cc-cd09-0410-ab3c-d52691b4dbfc