WebCore/bindings/objc/DOMEvents.h
@@ -43,8 +43,7 @@
 @interface DOMNode (DOMEventTarget) <DOMEventTarget>
 @end
 
-// Using ENABLE(SVG) results in a compilation error.
-#ifdef ENABLE_SVG
+#if ENABLE(SVG)
 #import <WebCore/DOMSVGElementInstance.h>
 @interface DOMSVGElementInstance (DOMEventTarget) <DOMEventTarget>
 @end
