WebCore/bindings/objc/PublicDOMInterfaces.h
@@ -121,7 +121,7 @@
 - (DOMCSSRuleList *)getMatchedCSSRules:(DOMElement *)element pseudoElement:(NSString *)pseudoElement;
 - (DOMCSSRuleList *)getMatchedCSSRules:(DOMElement *)element pseudoElement:(NSString *)pseudoElement authorOnly:(BOOL)authorOnly;
 - (DOMNodeList *)getElementsByName:(NSString *)elementName;
-#ifdef ENABLE_XPATH
+#if ENABLE_XPATH
 - (DOMXPathExpression *)createExpression:(NSString *)expression :(id <DOMXPathNSResolver>)resolver;
 - (DOMXPathExpression *)createExpression:(NSString *)expression resolver:(id <DOMXPathNSResolver>)resolver;
 - (id <DOMXPathNSResolver>)createNSResolver:(DOMNode *)nodeResolver;
